--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
         <div class="container">
             <div class="header__flex">
                 <div class="logo">
-                    <img src="" alt="" class="logo__header">
+                    <img src="./assets/logo.png" alt="" class="logo__header">
                     <h1 class="header__title">незамерзайка</h1>
-                    <p class="header__description">отпом и в розницу доставка по <span>москве</span></p>
+                    <p class="header__description">оптом и в розницу доставка по <span>москве</span></p>
                 </div>
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
                     <div class="container-fluid">
@@ -43,13 +43,13 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src=".." class="d-block w-100" alt="...">
+                    <img src="./assets/bunner1.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src=".." class="d-block w-100" alt="...">
+                    <img src="./assets/banner2.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src=".." class="d-block w-100" alt="...">
+                    <img src="./assets/bunner3.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
               </div>
